# Zkare

./: .env.example  .gitignore  DEPLOYMENT.md  ENV_SETUP.md  README.md  README_detailed.md  docker-compose.yml  start.sh
database/: init.sql
entity1-zkproof/: Cargo.toml  Dockerfile  build.rs
entity1-zkproof/docker/: entrypoint.sh  healthcheck.sh
entity1-zkproof/migrations/: 001_initial_schema.sql
entity1-zkproof/src/: guest.rs  main.rs
entity2-llm/: Dockerfile  requirements.txt
entity2-llm/app/: cache.py  config.py  llm_engine.py  main.py  models.py  prompt_strategy.py  proof_verifier.py  rate_limiter.py
entity2-llm/docker/: entrypoint.sh  healthcheck.sh
web-interface/: Dockerfile  index.html  package.json
web-interface/chat/: index.html  popup.html
web-interface/src/pages/: index.tsx
